# jaim

./: .gitignore  AUTHORS  CLAUDE.md  GNUmakefile  INSTALL  Makefile  Makefile.am  NEWS  README.md  acl.cc  acl.h  argtype.h  complete.cc  config.h  configure.ac  cred.cc  cred.h  default_conf.cc  defer.h  err.h  fs.cc  fs.h  jai.1.md  jai.cc  jai.h  jaim.1.md  jaim.cc  jaim.conf.in  jaim.h  move_only_function.h  options.cc  options.h  overlay.cc  setup_user.cc
.beads/: config.yaml  metadata.json  routes.jsonl
.beads/formulas/: cooking.formula.toml  mol-do-work.formula.toml  mol-polecat-base.formula.toml  mol-polecat-commit.formula.toml  mol-scoped-work.formula.toml  pancakes.formula.toml
.beads/hooks/: on_close  on_create  on_update
.gc/tmp/: prompt-jaim--claude-1-4170088042.txt
.githooks/: pre-commit
.runtime/: session_id
bash-completion/: jaim
scripts/: check-gpl3.sh
tests/: .gitignore  Makefile.am  casual-home-readonly-test.sh  common.sh.in  credential-mask-test.sh  cwd-mask-bypass-test.sh  env-strip-url-test.sh  fd-scrub-test.sh  file-grant-test.sh  fs_acl_test.cc  kube-mask-test.sh  macos-browser-mask-test.sh  script-optional.sh  script.sh  setenv-override-warn-test.sh  setup-setuid-test.sh  setup-user-test.sh  ssh-mask-bypass-test.sh  strict-uid-separation-test.sh  teardown-test.sh
